scode/TeamDigital/prob11/error.txt
main.c:2:1: error: unknown type name 'using'
    2 | using System;
      | ^~~~~
main.c:4:1: error: unknown type name 'class'
    4 | class GFG
      | ^~~~~
main.c:5:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
    5 | {
      | ^
